--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "web-boilerplate",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "",
+    "dev": ""
+    "prod": ""
   },
   "author": "",
   "license": "ISC",
