--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
-  "scripts": {
-    "start": "",
-    "dev": ""
-    "prod": ""
-  },
+  "scripts": {},
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "browserify": "^9.0.3",
-    "gulp": "^3.8.11"
+    "gulp": "^3.8.11",
+    "gulp-autoprefixer": "^2.1.0",
+    "gulp-sass": "^1.3.3",
+    "minimist": "^1.1.1",
+    "require-dir": "^0.3.0"
   }
 }
