--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-sass": "^1.3.3",
+    "gulp-sourcemaps": "^1.5.1",
+    "gulp-util": "^3.0.4",
     "minimist": "^1.1.1",
     "require-dir": "^0.3.0"
   }
