--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "dev": "gulp build --watch --debug"  
+    "dev": "gulp build --watch --debug"
   },
   "author": "",
   "license": "ISC",
@@ -12,13 +12,18 @@
     "browserify": "^9.0.3",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
+    "gulp-if": "^1.2.5",
     "gulp-minify-css": "^1.0.0",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.0",
     "gulp-sass": "^1.3.3",
     "gulp-sourcemaps": "^1.5.1",
+    "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.4",
     "minimist": "^1.1.1",
-    "require-dir": "^0.3.0"
+    "require-dir": "^0.3.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.1.0"
   }
 }
