--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-if": "^1.2.5",
+    "gulp-imagemin": "^2.2.1",
     "gulp-minify-css": "^1.0.0",
+    "gulp-newer": "^0.5.0",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.0",
     "gulp-sass": "^1.3.3",
     "gulp-sourcemaps": "^1.5.1",
     "gulp-uglify": "^1.1.0",
+    "imagemin-pngquant": "^4.0.0",
     "minimist": "^1.1.1",
     "require-dir": "^0.3.0",
     "vinyl-buffer": "^1.0.0",
