--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "web-boilerplate",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
   "scripts": {
     "dev": "gulp build --watch --debug",
     "sync": "gulp sync --watch --debug",
@@ -33,5 +32,7 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.1.0"
+  },
+  "browser": {
   }
 }
