--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "del": "^1.1.1",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
+    "gulp-duration": "0.0.0",
+    "gulp-filesize": "0.0.6",
     "gulp-if": "^1.2.5",
     "gulp-imagemin": "^2.2.1",
     "gulp-minify-css": "^1.0.0",
@@ -32,6 +34,5 @@
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.1.0"
   },
-  "browser": {
-  }
+  "browser": {}
 }
