--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-duration": "0.0.0",
-    "gulp-filesize": "0.0.6",
     "gulp-if": "^1.2.5",
     "gulp-imagemin": "^2.2.1",
     "gulp-minify-css": "^1.0.0",
@@ -25,6 +24,7 @@
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.0",
     "gulp-sass": "^1.3.3",
+    "gulp-size": "^1.2.1",
     "gulp-sourcemaps": "^1.5.1",
     "gulp-uglify": "^1.1.0",
     "imagemin-pngquant": "^4.0.0",
