--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "web-boilerplate",
   "version": "0.2.0",
   "scripts": {
-    "dev": "gulp build --watch --debug",
-    "sync": "gulp sync --watch --debug",
+    "dev": "gulp build && gulp sync --watch --debug",
     "prod": "gulp build --minify",
     "export": "git archive -o temp/project.zip master",
     "export:web": "git archive -0 -o temp/project-web.zip master \"web\""
