fix sync js/img files

--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "gulp-size": "^1.2.1",
     "gulp-sourcemaps": "^1.5.1",
     "gulp-uglify": "^1.1.0",
+    "gulp-watch": "^4.2.4",
     "imagemin-pngquant": "^4.0.0",
+    "install": "^0.1.8",
     "minimist": "^1.1.1",
+    "npm": "^2.11.1",
     "require-dir": "^0.3.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
