--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "npm": "^2.11.1",
     "require-dir": "^0.3.0",
     "vinyl-buffer": "^1.0.0",
+    "vinyl-ftp": "^0.4.1",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.1.0"
   },
