--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-size": "^1.2.1",
     "gulp-sourcemaps": "^1.5.1",
     "gulp-uglify": "^1.1.0",
+    "gulp-util": "^3.0.5",
     "gulp-watch": "^4.2.4",
     "imagemin-pngquant": "^4.0.0",
     "install": "^0.1.8",
