--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-preset-es2015-loose": "^7.0.0",
+    "babelify": "^7.2.0",
     "browser-sync": "^2.7.6",
     "browserify": "^12.0.1",
     "del": "^2.1.0",
