--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "dev": "gulp build --watch --debug",
     "prod": "gulp build --minify",
-    "export:dist": "gulp export --dist",
-    "export:archive": "gulp export --archive"
+    "export-dist": "gulp export --dist",
+    "export-archive": "gulp export --archive"
   },
   "author": "",
   "license": "ISC",
