--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,8 @@
   },
   "config": {
     "vendor-dir": "app/vendor"
-  } 
+  },
+  "scripts": {
+    "post-install-cmd": "cp -n app/config.SAMPLE.php app/config.php || true"
+  }
 }
