--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "gulp build --watch --debug",
     "prod": "gulp build --minify",
     "export-dist": "gulp export --dist",
-    "export-archive": "gulp export --archive"
+    "export-archive": "gulp export --archive",
+    "deploy": "gulp deploy"
   },
   "author": "",
   "license": "ISC",
