--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ web/
 *.sublime-project
 *.sublime-workspace
 temp/*
-build/gulp/ftp-config.js
+build/gulp/ftp-config.json
 app/config.php
 
 !dev/js/node_modules/
