--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mkdirp": "^0.5.1",
     "npm": "^3.8.5",
     "require-dir": "^0.3.0",
+    "run-sequence": "^1.1.5",
     "vinyl-buffer": "^1.0.0",
     "vinyl-ftp": "^0.4.5",
     "vinyl-source-stream": "^1.1.0",
