--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
   "require": {
-      "slim/slim": "^2.6",
-      "slim/views": "0.*",
-      "twig/twig": "1.*"
+    "slim/slim": "^3.0",
+    "twig/twig": "1.*",
+    "slim/twig-view": "^2.3"
   },
   "config": {
     "vendor-dir": "app/vendor"
