use a package for svg twig extension

--- a/composer.json
+++ b/composer.json
@@ -2,15 +2,15 @@
   "require": {
     "slim/slim": "^3.0",
     "twig/twig": "1.*",
-    "slim/twig-view": "^2.3"
+    "slim/twig-view": "^2.3",
+    "manuelodelain/svg-twig-extension": "^0.1.0"
   },
   "config": {
     "vendor-dir": "app/vendor"
   },
   "autoload": {
     "psr-4": {
-      "pages\\": "app/pages/",
-      "twig_extensions\\": "app/twig/extensions/"
+      "pages\\": "app/pages/"
     }
   },
   "scripts": {
