--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-preset-es2015": "^6.18.0",
+    "@babel/core": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
     "babelify": "^10.0.0",
     "browser-sync": "^2.17.5",
     "browserify": "^16.2.3",
@@ -41,7 +42,7 @@
     "mkdirp": "^0.5.1",
     "require-dir": "^1.0.0",
     "run-sequence": "^2.2.1",
-    "vinyl-buffer": "^1.0.0",
+    "vinyl-buffer": "^1.0.1",
     "vinyl-ftp": "^0.6.1",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.7.0"
