--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
-    "babelify": "^10.0.0",
     "browser-sync": "^2.26.3",
-    "browserify": "^16.2.3",
+    "chalk": "^2.4.2",
     "del": "^3.0.0",
+    "fancy-log": "^1.3.3",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-clean-css": "^3.10.0",
@@ -40,11 +40,16 @@
     "install": "^0.12.2",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
+    "node-notifier": "^5.3.0",
     "require-dir": "^1.2.0",
+    "rollup": "^1.1.0",
+    "rollup-plugin-babel": "^4.3.0",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-includepaths": "^0.2.3",
+    "rollup-plugin-node-resolve": "^4.0.0",
+    "rollup-plugin-uglify": "^6.0.1",
     "run-sequence": "^2.2.1",
-    "vinyl-buffer": "^1.0.1",
     "vinyl-ftp": "^0.6.1",
-    "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.11.0"
   },
   "browser": {}
