--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-duration": "0.0.0",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^4.1.0",
+    "gulp-modernizr": "^3.1.0",
     "gulp-newer": "^1.4.0",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.1",
