--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/preset-env": "^7.2.3",
     "browser-sync": "^2.26.3",
     "chalk": "^2.4.2",
+    "css-loader": "^2.1.0",
     "del": "^3.0.0",
     "fancy-log": "^1.3.3",
     "gulp": "^3.9.1",
@@ -43,6 +44,7 @@
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
     "node-notifier": "^5.3.0",
+    "node-sass": "^4.11.0",
     "require-dir": "^1.2.0",
     "rollup": "^1.1.0",
     "rollup-plugin-babel": "^4.3.0",
@@ -51,6 +53,8 @@
     "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-uglify": "^6.0.1",
     "run-sequence": "^2.2.1",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "vinyl-ftp": "^0.6.1",
     "watchify": "^3.11.0",
     "webpack": "^4.29.5",
