--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "mkdirp": "^0.5.1",
     "node-notifier": "^5.3.0",
     "node-sass": "^4.11.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "require-dir": "^1.2.0",
     "rollup": "^1.1.0",
     "rollup-plugin-babel": "^4.3.0",
