--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-loader": "^8.0.5",
     "browser-sync": "^2.26.3",
     "chalk": "^2.4.2",
+    "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^2.1.0",
     "del": "^3.0.0",
     "fancy-log": "^1.3.3",
