--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "browser-sync": "^2.26.3",
     "chalk": "^2.4.2",
     "clean-webpack-plugin": "^1.0.1",
+    "copy-webpack-plugin": "^5.0.0",
     "css-loader": "^2.1.0",
     "del": "^3.0.0",
     "fancy-log": "^1.3.3",
