--- a/package.json
+++ b/package.json
@@ -43,7 +43,11 @@
     "gulp-util": "^3.0.7",
     "gulp-watch": "^5.0.1",
     "gulp-zip": "^4.2.0",
+    "imagemin-gifsicle": "^6.0.1",
+    "imagemin-mozjpeg": "^8.0.0",
     "imagemin-pngquant": "^6.0.1",
+    "imagemin-svgo": "^7.0.0",
+    "imagemin-webpack": "^4.1.0",
     "install": "^0.12.2",
     "mini-css-extract-plugin": "^0.5.0",
     "minimist": "^1.2.0",
