--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gulp-util": "^3.0.7",
     "gulp-watch": "^5.0.1",
     "gulp-zip": "^4.2.0",
+    "html-webpack-plugin": "^3.2.0",
     "imagemin-gifsicle": "^6.0.1",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-pngquant": "^6.0.1",
