--- a/package.json
+++ b/package.json
@@ -72,5 +72,8 @@
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.0"
   },
-  "browser": {}
+  "browser": {},
+  "dependencies": {
+    "gsap": "^2.1.2"
+  }
 }
