--- a/package.json
+++ b/package.json
@@ -75,7 +75,8 @@
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.0",
-    "webpack-merge": "^4.2.1"
+    "webpack-merge": "^4.2.1",
+    "webpack-notifier": "^1.7.0"
   },
   "browser": {},
   "dependencies": {},
