--- a/package.json
+++ b/package.json
@@ -2,17 +2,10 @@
   "name": "web-starter",
   "version": "0.3.0",
   "scripts": {
-    "dev": "NODE_ENV=development gulp build --watch",
-    "dev-webpack": "NODE_ENV=development BUILD_TYPE=modern webpack-dev-server",
-    "dev-legacy-webpack": "NODE_ENV=development BUILD_TYPE=legacy webpack-dev-server",
-    "prod-webpack": "NODE_ENV=production webpack",
-    "prod": "NODE_ENV=production gulp build --minify",
-    "export-dist": "gulp export --dist",
-    "export-archive": "gulp export --archive",
-    "deploy": "gulp deploy",
-    "deploy-staging": "npm run prod && npm run deploy",
-    "deploy-prod": "npm run prod && npm run deploy -- --prod",
-    "clean-exports": "gulp clean-exports"
+    "dev": "NODE_ENV=development BUILD_TYPE=modern webpack-dev-server",
+    "dev-legacy": "NODE_ENV=development BUILD_TYPE=legacy webpack-dev-server",
+    "prod": "NODE_ENV=production webpack",
+    "export-dist": ""
   },
   "author": "",
   "license": "ISC",
@@ -21,57 +14,22 @@
     "@babel/preset-env": "^7.2.3",
     "autoprefixer": "^9.4.10",
     "babel-loader": "^8.0.5",
-    "browser-sync": "^2.26.3",
-    "chalk": "^2.4.2",
     "clean-webpack-plugin": "^1.0.1",
     "copy-webpack-plugin": "^5.0.0",
     "css-loader": "^2.1.0",
-    "del": "^3.0.0",
-    "fancy-log": "^1.3.3",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^6.0.0",
-    "gulp-clean-css": "^3.10.0",
-    "gulp-duration": "0.0.0",
-    "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^4.1.0",
-    "gulp-modernizr": "^3.1.0",
-    "gulp-newer": "^1.4.0",
-    "gulp-notify": "^3.2.0",
-    "gulp-plumber": "^1.2.1",
-    "gulp-sass": "^4.0.2",
-    "gulp-size": "^3.0.0",
-    "gulp-sourcemaps": "^2.6.4",
-    "gulp-uglify": "^3.0.1",
-    "gulp-util": "^3.0.7",
-    "gulp-watch": "^5.0.1",
-    "gulp-zip": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "imagemin-gifsicle": "^6.0.1",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-pngquant": "^6.0.1",
     "imagemin-svgo": "^7.0.0",
     "imagemin-webpack": "^4.1.0",
-    "install": "^0.12.2",
     "mini-css-extract-plugin": "^0.5.0",
-    "minimist": "^1.2.0",
-    "mkdirp": "^0.5.1",
-    "node-notifier": "^5.3.0",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
-    "require-dir": "^1.2.0",
-    "rollup": "^1.1.0",
-    "rollup-plugin-babel": "^4.3.0",
-    "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-includepaths": "^0.2.3",
-    "rollup-plugin-node-resolve": "^4.0.0",
-    "rollup-plugin-uglify": "^6.0.1",
-    "run-sequence": "^2.2.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.2.3",
-    "vinyl-ftp": "^0.6.1",
-    "watchify": "^3.11.0",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.0",
