--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,16 @@
 node_modules/
-app/vendor/
-app/data/cache/
-app/templates/cache/
-app/templates/inject/scripts-legacy.twig
-app/templates/inject/scripts-modern.twig
-app/templates/inject/styles.twig
-web/
+vendor/
+templates/
+templates/inject/scripts-legacy.twig
+templates/inject/scripts-modern.twig
+templates/inject/styles.twig
+var/
 exports/
+/public/bundles/
 
 .DS_Store
 *.log
-app/config.php
+
+/.env.local
+/.env.local.php
+/.env.*.local
