--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
   "require": {
     "slim/slim": "^3.0",
-    "twig/twig": "1.*",
-    "slim/twig-view": "^2.3",
+    "twig/twig": "^2.11",
+    "slim/twig-view": "^2.5",
     "manuelodelain/svg-twig-extension": "^0.1.0",
     "symfony/dotenv": "^4.3"
   },
