--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chokidar": "^3.0.2",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.4",
+    "core-js": "^3.1.4",
     "css-loader": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
     "imagemin-webpack-plugin": "^2.4.2",
