--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "NODE_ENV=development BUILD_TYPE=modern webpack-dev-server",
     "dev-legacy": "NODE_ENV=development BUILD_TYPE=legacy webpack-dev-server",
     "prod": "NODE_ENV=production webpack",
-    "export-dist": ""
+    "gulp": "gulp",
+    "export-dist": "EXPORT_TYPE=dist npm run gulp export"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +20,8 @@
     "copy-webpack-plugin": "^5.0.4",
     "core-js": "^3.1.4",
     "css-loader": "^3.1.0",
+    "gulp": "^4.0.2",
+    "gulp-zip": "^5.0.0",
     "html-webpack-plugin": "^3.2.0",
     "imagemin-webpack-plugin": "^2.4.2",
     "mini-css-extract-plugin": "^0.8.0",
