--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "copy-webpack-plugin": "^5.0.4",
     "core-js": "^3.1.4",
     "css-loader": "^3.1.0",
+    "dotenv": "^8.0.0",
     "gulp": "^4.0.2",
     "gulp-zip": "^5.0.0",
     "html-webpack-plugin": "^3.2.0",
